--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,9 @@ h1{
     align-items: center;
     flex-direction: column;
 }
+#todo-list-container form{
+    
+}
 
 #todo-list{
     width: 100%;
