--- a/src/styles.css
+++ b/src/styles.css
@@ -22,19 +22,34 @@ h1{
     align-items: center;
     flex-direction: column;
 }
+
 #todo-list-container form{
-    
+    margin-bottom: 20px;
 }
 
 #todo-list{
-    width: 100%;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 #todo-list li{
     display: flex;
     gap: 40px;
-    justify-content: center;
+    padding-left: 25%;
+    width: 80%;
     align-items: center;
     font-size: 30px;
+}
+li input{
+    -webkit-appearance: none;
+	border: 1px solid #cacece;
+	box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
+	padding: 9px;
+	border-radius: 10px;
+	display: inline-block;
+	position: relative;
+    cursor: pointer;
 }
 #todo-list li p{
     font-size: 30px;
