--- a/src/styles.css
+++ b/src/styles.css
@@ -47,6 +47,8 @@ div div img{
     width: 30px;
 }
 
+
+
 .main-folder-container{
     padding: 20px 25px;
     background-color: #e0e0e0;
@@ -54,18 +56,28 @@ div div img{
 
 .folder-add-container{
     display: flex;
+    margin-top: 10px;
+    padding-top: 10px;
+    border-top: 1px solid gray;
     font-size: 20px;
+    justify-content: space-between;
+    align-items: center;
 }
 
 #display-form-btn{
-    margin-left: 20px;
+    border-radius: 20px;
+    font-size: 23px;
+    width: 30px;
+    height: 30px;
+    border: 2px solid black;
+    background-color: transparent;
 }
+
 #form{
     display: none;
     z-index: 1;
-    background-color: white;
-    padding: 20px;
-    border: 1px black solid;
+    width: 100%;
+    background-color: transparent;
     border-radius: 10px;
 }
 
@@ -74,7 +86,14 @@ div div img{
     flex-direction: column;
     align-items: center;
     gap: 17px;
-    margin: 17px 5px;
+    margin: 17px 0px;
+}
+
+#form input{
+    width: 90%;
+    height: 18px;
+    font-size: 15px;
+    padding-left: 2px;
 }
 
 .folder-container{
