--- a/src/styles.css
+++ b/src/styles.css
@@ -38,6 +38,10 @@ h1{
     display: flex;
     justify-content: space-between;
 }
+
+.active{
+    background-color: #c2c2c2;
+}
 div h2 {
     font-size: 30px;
     color: #222222;
@@ -73,7 +77,7 @@ div div img{
     background-color: transparent;
 }
 
-#form{
+#form-folder{
     display: none;
     z-index: 1;
     width: 100%;
@@ -81,19 +85,37 @@ div div img{
     border-radius: 10px;
 }
 
-#form.active{
+#form-folder.active{
     display: flex;
-    flex-direction: column;
     align-items: center;
-    gap: 17px;
+    gap: 10px;
     margin: 17px 0px;
 }
 
-#form input{
-    width: 90%;
+.form-folder-input{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+#form-folder input{
+    width: 95%;
     height: 18px;
     font-size: 15px;
     padding-left: 2px;
+    background-color: transparent;
+    border: none;
+    border-left: 2px solid black;
+}
+
+
+#form-folder button{
+    border: none;
+    background-color: transparent;
+}
+
+#form-folder button img{
+    width: 35px;
 }
 
 .folder-container{
@@ -143,20 +165,15 @@ li input:active, li input:checked:active{
 }
 
 li input:checked{
-    background-color: #000000;
+    background-color: #ffffff;
 	border: 1px solid #000000;
 	box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05), inset 15px 10px -12px rgba(255,255,255,0.1);
 	color: #ffffff;
+    background-image: url("img/check-all.svg");
+
 }
 
-li input:checked::after{
-    content: '\2714';
-	font-size: 14px;
-	position: absolute;
-	top: 0px;
-	left: 3px;
-	color: #ffffff;
-}
+
 #todo-list li p{
     font-size: 30px;
 }
