--- a/src/styles.css
+++ b/src/styles.css
@@ -29,10 +29,12 @@
 }
 
 .folder-img{
-    max-width: 40px;
+    max-width: 50px;
     margin-left: 10px;
+    padding-right: auto;
     display: none;
-    margin-right: auto;
+    position: fixed;
+    left: 0;
 }
 
 h1{
@@ -54,7 +56,7 @@ div h2 {
     color: #222222;
 }
 
-/* Trash Can in Folders Img */
+/* Trash Can Img in Folders  */
 div div img{
     width: 30px;
     filter: drop-shadow(4px 3px 2px rgba(0, 0, 0, 0.308));
@@ -119,6 +121,7 @@ div div img{
     flex-direction: column;
     width: 80%;
     gap: 10px;
+    border-radius: 0;
 }
 
 #form-folder input{
@@ -127,6 +130,7 @@ div div img{
     padding-left: 3px;
     background-color: transparent;
     border: none;
+    border-radius: 0;
     display: none;
     outline: none;
     border-left: 2px solid black;
@@ -291,6 +295,7 @@ li input:checked{
 /* Form Todo Title */
 #todo-title{
     border: none;
+    border-radius: 0;
     border-left: 2px solid black;
     width: min(300px, 100%);
 }
@@ -389,8 +394,13 @@ li input:checked{
     }
     #todo-title, #todo-priority, #date-todo{
         font-size: 26px;
+        color: black;
     }
     #todo-title, #todo-priority{width: 49%;}
 
-    #date-todo{text-align: center; margin-bottom: 15px;}
+    #date-todo{
+        text-align: center;
+        margin-bottom: 15px;
+        height: auto;
+    }
 }  
